--- a/Server/index.html
+++ b/Server/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connection CMGMMO</title>
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="icon" href="./cmg.png">
-    <script src="../../script.js"></script>
+    <script src="./script.js"></script>
     <style>
         body {
             background-color: #333232;
@@ -223,7 +223,6 @@
             <br>
             <button id="connect-button" onclick="openMinecraft()">Add Server</button>
             <button id="cmgmmodis">Join Discord</button>
-            <button id="back">Back..</button>
             <br>
             <div class="server-details">
                 <h3>Server Details:</h3>
