--- a/Server/index.html
+++ b/Server/index.html
@@ -171,12 +171,12 @@
                     if (data.players) {
                         const onlinePlayers = data.players.online;
 
-                        displayPlayerCountWithDelay("Loading", 100);
+                        displayPlayerCountWithDelay("Loading", 1);
                         displayPlayerCountWithDelay("Loading.", 256);
                         displayPlayerCountWithDelay("Loading..", 425);
                         displayPlayerCountWithDelay("Loading...", 674);
                         for (let i = 0; i < onlinePlayers + 1; i++) {
-                            displayPlayerCountWithDelay(`${i} (${onlinePlayers})`, 1235 + i * 500);
+                            displayPlayerCountWithDelay(i, 1235 + i * 500);
                         }
                         displayPlayerCountWithDelay(`${i}`, 0);
                     }
