--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
 
 <head>
   <title>CMGMMO!</title>
-  <style>
-    body {
-      background-color: #000000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-  </style>
+  <link rel="icon" href="./Server/cmg.png">
   <meta http-equiv="refresh" content="0;url=https://cmgmmo.github.io/Server/">
 </head>
 </html>
