--- a/Server/index.html
+++ b/Server/index.html
@@ -170,13 +170,9 @@
                 .then(data => {
                     if (data.players) {
                         const onlinePlayers = data.players.online;
-
-                        displayPlayerCountWithDelay("Loading", 123);
-                        displayPlayerCountWithDelay("Loading.", 234);
-                        displayPlayerCountWithDelay("Loading..", 345);
-                        displayPlayerCountWithDelay("Loading...", 456);
+
                         for (let i = 0; i < onlinePlayers + 1; i++) {
-                            displayPlayerCountWithDelay(i, 456 + i * 50);
+                            displayPlayerCountWithDelay(i, 500);
                         }
                         displayPlayerCountWithDelay(`${i}`, 0);
                     }
@@ -219,7 +215,7 @@
             <img src="./cmg.png" alt="Profile Picture" class="profile-pic">
             <h2>@CMGMMO!</h2>
             <p>This is a page to add the Minecraft Bedrock Server <span id="yellow">CMGMMO</span></p>
-            <p>Now Player(s) Online: <span id="playerCount">Loading</span>/30</p>
+            <p>Now Player(s) Online: <span id="playerCount">0</span>/30</p>
             <br>
             <button id="connect-button" onclick="openMinecraft()">Add Server</button>
             <button id="cmgmmodis">Join Discord</button>
