--- a/Server/index.html
+++ b/Server/index.html
@@ -168,7 +168,7 @@
                     }
                 })
                 .catch(error => {
-                    console.error('Error fetching player count:', error
+                    console.error('Error fetching player count:', error)
                     playerCountElement.textContent = `Error fetching player count: ${error}`
                 });
         }
