--- a/Server/index.html
+++ b/Server/index.html
@@ -9,11 +9,39 @@
     <link rel="icon" href="./cmg.png">
     <script src="./script.js"></script>
     <style>
+        @media (max-width: 768px) {
+            .container {
+                padding: 10px;
+            }
+        }
+
+        .fade-in-background {
+            animation: fade-in 1s ease-in-out;
+        }
+
+        @keyframes fade-in {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
         body {
-            background-color: #333232;
+            backdrop-filter: blur(3px);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            text-align: center;
+            overflow: hidden;
             font-family: Arial, sans-serif;
+            height: 100vh;
             margin: 0;
-            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         main {
@@ -24,11 +52,12 @@
         }
 
         .container {
-            background-color: #2e2d2d;
+            display: inline-block;
             padding: 20px;
+            border: 5px solid rgba(0, 0, 0, 0.5);
             border-radius: 10px;
-            text-align: center;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            background-color: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(5px);
         }
 
         h2 {
@@ -82,12 +111,11 @@
         }
 
         .server-details {
-            color: #555;
-            border: 1px solid #ccc;
+            color: #3d3d3d;
+            border: 1px solid #000000;
             border-radius: 5px;
             padding: 10px;
             margin-top: 20px;
-            background-color: #5c5b5b;
         }
 
         .server-details h3 {
@@ -97,7 +125,7 @@
         }
 
         .server-details h3:hover {
-            color: #ffff44;
+            color: #ffff82;
             margin-top: 0;
         }
 
@@ -115,13 +143,18 @@
 
         footer {
             text-align: center;
-            background-color: #333232;
             color: #f4f4f4;
             padding: 10px 0;
             position: absolute;
             bottom: 0;
             width: 100%;
         }
+
+        img.w-48 {
+            width: 500px !important;
+            padding: 10px 20px;
+        }
+
 
         .fade-in {
             animation: fade-in 1s ease-in-out;
@@ -154,6 +187,17 @@
         }
     </style>
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const imageUrls = ['./img/1.png', './img/2.png', './img/3.png', './img/4.png', './img/5.png', './img/6.png', './img/7.png', './img/8.png'];
+            const randomIndex = Math.floor(Math.random() * imageUrls.length);
+            const backgroundImage = new Image();
+            backgroundImage.src = imageUrls[randomIndex] ?? './img/1.png';
+            backgroundImage.onload = function () {
+            document.body.style.backgroundImage = `url('${backgroundImage.src}')`;
+            document.body.classList.add('fade-in-background');
+        };
+        })
+
         function fetchPlayerCount() {
             const ip = "cmgmmo.mc.in.th:21356"
             const playerCountElement = document.getElementById('playerCount');
@@ -203,9 +247,11 @@
 <body>
     <main>
         <div class="container">
-            <img src="./cmg.png" alt="Profile Picture" class="profile-pic">
-            <h2>@CMGMMO!</h2>
-            <p>This is a page to add the Minecraft Bedrock Server <span id="yellow">CMGMMO</span></p>
+            <img src="./img/title.png" alt="Logo"
+                class="w-48 h-auto mb-5 animate-heartbeat_3s_ease-in-out_infinite rounded">
+            <!-- <h2>@CMGMMO!</h2> -->
+            <p>Minecraft Bedrock Server <span id="yellow">CMGMMO</span></p>
+            <p>The Minecraft Bedrock MMO Vanilla Server!</p>
             <p>Now Player(s) Online: <span id="playerCount">0</span>/30</p>
             <br>
             <button id="connect-button" onclick="openMinecraft()">Add Server</button>
@@ -216,7 +262,7 @@
                 <ul>
                     <li><strong>Server Name:</strong> CMGMMO!</li>
                     <li><strong>Server Address:</strong> cmgmmo.mc.in.th</li>
-                    <li><strong>Port:</strong> 21356</li>
+                    <li><strong>Server Port:</strong> 21356</li>
                 </ul>
             </div>
             <div id="instructions"></div>
