--- a/Server/index.html
+++ b/Server/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+<meta property="og:title" content="@CMGMMO">
+    <meta property="og:description" content="A Minecraft Bedrock Vanilla MMO Server!">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1048791650706673694/1149900020968067082/image.png">
+    <meta property="og:url" content="https://cmgmmo.github.io/Server">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connection CMGMMO</title>
