--- a/Server/index.html
+++ b/Server/index.html
@@ -2,11 +2,16 @@
 <html>
 
 <head>
+    <meta property="og:title" content="@CMGMMO">
+    <meta property="og:description" content="Added Minecraft Bedrock CMGMMO Server!">
+    <meta property="og:image"
+        content="../img/cmg.png">
+    <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connection CMGMMO</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="./cmg.png">
+    <link rel="icon" href="../img/cmg.png">
     <script src="./script.js"></script>
     <style>
         @media (max-width: 768px) {
@@ -191,10 +196,10 @@
     </style>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            const imageUrls = ['./img/1.png', './img/2.png', './img/3.png', './img/4.png', './img/5.png', './img/6.png', './img/7.png', './img/8.png'];
+            const imageUrls = ['../img/1.png', '../img/2.png', '../img/3.png', '../img/4.png', '../img/5.png', '../img/6.png', '../img/7.png', '../img/8.png'];
             const randomIndex = Math.floor(Math.random() * imageUrls.length);
             const backgroundImage = new Image();
-            backgroundImage.src = imageUrls[randomIndex] ?? './img/1.png';
+            backgroundImage.src = imageUrls[randomIndex] ?? '../img/1.png';
             backgroundImage.onload = function () {
                 document.body.style.backgroundImage = `url('${backgroundImage.src}')`;
                 document.body.classList.add('fade-in-background');
@@ -250,7 +255,7 @@
 <body>
     <main>
         <div class="container">
-            <img src="./img/title.png" alt="Logo"
+            <img src="../img/title.png" alt="Logo"
                 class="w-48 h-auto mb-5 animate-heartbeat_3s_ease-in-out_infinite rounded">
             <p>Minecraft Bedrock Server <span id="yellow">CMGMMO</span></p>
             <p>The Minecraft Bedrock MMO Vanilla Server!</p>
