--- a/Tournament/index.html
+++ b/Tournament/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connection CMGMMO</title>
+    <title>Join Tournament!</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" href="../img/cmg.png">
     <script src="./script.js"></script>
