--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 
 <head>
+  <meta property="og:title" content="@CMGMMO's Server">
+  <meta property="og:description" content="Added Minecraft Bedrock CMGMMO Server!">
+  <meta property="og:image" content="../img/cmg.png">
+  <meta property="og:url" content="https://cmgmmo.github.io">
+  <meta charset="UTF-8">
   <title>CMGMMO!</title>
-  <link rel="icon" href="./Server/cmg.png">
+  <h2>Please waiting we are redirecting you..<h2>
+  <link rel="icon" href="../img/cmg.png">
   <meta http-equiv="refresh" content="0;url=https://cmgmmo.github.io/Server/">
 </head>
 
