--- a/Server/index.html
+++ b/Server/index.html
@@ -2,9 +2,14 @@
 <html>
 
 <head>
+    <meta property="og:title" content="@CMGMMO's Server">
+    <meta property="og:description" content="Added Minecraft Bedrock CMGMMO Server!">
+    <meta property="og:image" content="../img/cmg.png">
+    <meta property="og:url" content="https://cmgmmo.github.io">
+    <meta charset="UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connection CMGMMO</title>
+    <title>Add @CMGMMO Server!</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" href="../img/cmg.png">
     <script src="./script.js"></script>
