--- a/Tournament/index.html
+++ b/Tournament/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta property="og:title" content="@CMGMMO">
     <meta property="og:description" content="Apply to join the tournament for CMGMMO!">
-    <meta property="og:image" content="../img/cmg.png">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
     <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Tournament!</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="../img/cmg.png">
+    <link rel="icon" href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
     <script src="./script.js"></script>
     <style>
         @media (max-width: 768px) {
