--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta property="og:title" content="@CMGMMO's Server">
   <meta property="og:description" content="Added Minecraft Bedrock CMGMMO Server!">
-  <meta property="og:image" content="../img/cmg.png">
+  <meta property="og:image" content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
   <meta property="og:url" content="https://cmgmmo.github.io">
   <meta charset="UTF-8">
   <title>CMGMMO!</title>
   <h2>Please waiting we are redirecting you..<h2>
-  <link rel="icon" href="../img/cmg.png">
+  <link rel="icon" href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
   <meta http-equiv="refresh" content="0;url=https://cmgmmo.github.io/Server/">
 </head>
 
