--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 <html>
 
 <head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      overflow: hidden;
+      font-family: 'IBM Plex Sans Thai', Arial, sans-serif;
+    }
+  </style>
   <meta property="og:title" content="@CMGMMO's Server">
-  <meta property="og:description" content="Added Minecraft Bedrock CMGMMO Server!">
-  <meta property="og:image" content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+  <meta property="og:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO บนไมน์คราฟต์!">
+  <meta property="og:image"
+    content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
   <meta property="og:url" content="https://cmgmmo.github.io">
   <meta charset="UTF-8">
   <title>CMGMMO!</title>
-  <h2>Please waiting we are redirecting you..<h2>
-  <link rel="icon" href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
-  <meta http-equiv="refresh" content="0;url=https://cmgmmo.github.io/Server/">
+  <h2>กำลังพาคุณไปหน้าหลักกรุณารอสักครู่..<h2>
+      <link rel="icon"
+        href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+      <meta http-equiv="refresh" content="0;url=./Server">
 </head>
 
 </html>
