--- a/Server/index.html
+++ b/Server/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <meta property="og:title" content="@CMGMMO's Server">
-    <meta property="og:description" content="Added Minecraft Bedrock CMGMMO Server!">
+    <meta property="og:title" content="เซิร์ฟเวอร์ของ @CMGMMO">
+    <meta property="og:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO!">
     <meta property="og:image" content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
     <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
@@ -14,13 +14,13 @@
     <link rel="icon" href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
     <script src="./script.js"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
         @media (max-width: 768px) {
             img.w-48 {
                 max-width: 80%;
                 height: auto;
             }
         }
-
 
         .fade-in-background {
             animation: fade-in 1s ease-in-out;
@@ -43,7 +43,8 @@
             background-attachment: fixed;
             text-align: center;
             overflow: hidden;
-            font-family: Arial, sans-serif;
+            font-size: 20px;
+            font-family: 'IBM Plex Sans Thai', Arial, sans-serif;
             height: 100vh;
             margin: 0;
             display: flex;
@@ -168,17 +169,7 @@
             animation: fade-in 1s ease-in-out;
         }
 
-        @keyframes fade-in {
-            0% {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+        
 
         .rotate {
             animation: rotate 1s linear infinite;
@@ -236,14 +227,16 @@
 
             if (isIOS) {
                 instructions.innerHTML = `
-            <p>Sorry, now you are using iOS so I can't add the server automatically.
-            Please add the server manually.</p>
+            <p>โทษทีนะแต่ IOS ไม่รองรับระบบการเพิ่ม เซิร์ฟเวอร์โดยอัตโนมัติ
+            กรุณาเพิ่มเซิร์ฟเวอร์ ด้วยตัวของคุณเอง
+            * ขออภัยในความไม่สดวก!</p>
         `;
             } else {
                 window.location.href = 'minecraft://?addExternalServer=§l§eCMGMMO|cmgmmo.mc.in.th:21356';
                 instructions.innerHTML = `
-            <p>Look like you didn't teleport to Minecraft?</p>
-            <p>Please add the server manually.</p>
+            <p>ดูเหมือว่าคุณไม่ได้เข้าเกมไมน์คราฟต์</p>
+            <p>ตรวจสอบให้แน่ใจว่าคุณ ติดตั้งไมน์คราฟต์แล้ว</p>
+            <p>* กรุณาเพิ่มเซิร์ฟเวอร์ ด้วยตัวของคุณเอง ขออภัยในความไม่สดวก!</p>
         `;
             }
             instructions.classList.add('fade-in');
@@ -257,19 +250,21 @@
         <div class="container">
             <img src="../img/title.png" alt="Logo"
                 class="w-48 h-auto mb-5 animate-heartbeat_3s_ease-in-out_infinite rounded">
-            <p>Minecraft Bedrock Server <span id="yellow">CMGMMO</span></p>
-            <p>The Minecraft Bedrock MMO Vanilla Server!</p>
-            <p>Now Player(s) Online: <span id="playerCount">0</span>/30</p>
+            <p>ไมน์คราฟต์เซิร์ฟเวอร์ <span id="yellow">CMGMMO</span></p>
+            <p>เซิร์ฟเวอร์ เก็บเวลตีมอน บนไมน์คราฟต์มือถือ(Bedrock)</p>
+            <p>มีผู้คนกำลังเล่นอยู่: <span id="playerCount">0</span>/30 คน</p>
             <br>
-            <button id="connect-button" onclick="openMinecraft()">Add Server</button>
-            <button id="cmgmmodis">Join Discord</button>
+            <button id="connect-button" onclick="openMinecraft()">เพิ่มเซิร์ฟเวอร์</button>
+            <button id="cmgmmodis">เข้าร่วมดิสคอร์ด..</button>
+            <button id="tour">ทัวร์นาเมนต์..</button>
+            <button id="plus">รีซอสแพ็คที่แนะนำ..</button>
             <br>
             <div class="server-details">
-                <h3>Server Details:</h3>
+                <h3>รายละเอียดของเซิร์ฟเวอร์</h3>
                 <ul>
-                    <li><strong>Server Name:</strong> CMGMMO!</li>
-                    <li><strong>Server Address:</strong> cmgmmo.mc.in.th</li>
-                    <li><strong>Server Port:</strong> 21356</li>
+                    <li><strong>ชื่อเซิร์ฟเวอร์:</strong> CMGMMO!</li>
+                    <li><strong>ที่อยู่เซิร์ฟเวอร์:</strong> cmgmmo.mc.in.th</li>
+                    <li><strong>พอร์ตซิร์ฟเวอร์:</strong> 21356</li>
                 </ul>
             </div>
             <div id="instructions"></div>
