--- a/Tournament/index.html
+++ b/Tournament/index.html
@@ -3,24 +3,26 @@
 
 <head>
     <meta property="og:title" content="@CMGMMO">
-    <meta property="og:description" content="Apply to join the tournament for CMGMMO!">
-    <meta property="og:image" content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+    <meta property="og:description" content="สมัครเข้าร่วมทัวร์นาเมนต์ของเซิร์ฟเวอร์ CMGMMO!">
+    <meta property="og:image"
+        content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
     <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Tournament!</title>
+    <title>เข้าร่วมทัวร์นาเมนต์ CMGMMO!</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+    <link rel="icon"
+        href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
     <script src="./script.js"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
         @media (max-width: 768px) {
             img.w-48 {
                 max-width: 80%;
                 height: auto;
             }
         }
-
 
         .fade-in-background {
             animation: fade-in 1s ease-in-out;
@@ -43,7 +45,8 @@
             background-attachment: fixed;
             text-align: center;
             overflow: hidden;
-            font-family: Arial, sans-serif;
+            font-size: 20px;
+            font-family: 'IBM Plex Sans Thai', Arial, sans-serif;
             height: 100vh;
             margin: 0;
             display: flex;
@@ -151,7 +154,7 @@
 
         footer {
             text-align: center;
-            color: #f4f4f4;
+            color: #c0bcbc;
             padding: 10px 0;
             position: absolute;
             bottom: 0;
@@ -168,17 +171,7 @@
             animation: fade-in 1s ease-in-out;
         }
 
-        @keyframes fade-in {
-            0% {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+        
 
         .rotate {
             animation: rotate 1s linear infinite;
@@ -196,63 +189,27 @@
     </style>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            const imageUrls = ['../img/1.png', '../img/2.png', '../img/3.png', '../img/4.png', '../img/5.png', '../img/6.png', '../img/7.png', '../img/8.png'];
-            const randomIndex = Math.floor(Math.random() * imageUrls.length);
             const backgroundImage = new Image();
-            backgroundImage.src = imageUrls[randomIndex] ?? '../img/1.png';
+            backgroundImage.src = '../img/7.png';
             backgroundImage.onload = function () {
                 document.body.style.backgroundImage = `url('${backgroundImage.src}')`;
                 document.body.classList.add('fade-in-background');
             };
         })
-
-        function openMinecraft() {
-            const userAgent = navigator.userAgent.toLowerCase();
-            const isIOS = /iphone|ipad|ipod/.test(userAgent);
-
-            const instructions = document.getElementById('instructions');
-            const button = document.getElementById('connect-button');
-
-            if (isIOS) {
-                instructions.innerHTML = `
-            <p>Sorry, now you are using iOS so I can't add the server automatically.
-            Please add the server manually.</p>
-        `;
-            } else {
-                window.location.href = 'minecraft://?addExternalServer=§l§eCMGMMO|cmgmmo.mc.in.th:21356';
-                instructions.innerHTML = `
-            <p>Look like you didn't teleport to Minecraft?</p>
-            <p>Please add the server manually.</p>
-        `;
-            }
-            instructions.classList.add('fade-in');
-            button.classList.add('rotate');
-        }
     </script>
 </head>
 
 <body>
     <main>
         <div class="container">
-            <img src="../img/title.png" alt="Logo"
+            <img src="https://media.discordapp.net/attachments/967680143617302548/1147171234820390972/minecraft_title.png?width=1278&height=405" alt="Logo"
                 class="w-48 h-auto mb-5 animate-heartbeat_3s_ease-in-out_infinite rounded">
-            <p>Minecraft Bedrock Server <span id="yellow">CMGMMO</span></p>
-            <p>The Minecraft Bedrock MMO Vanilla Server!</p>
-            <p>Do you want to join the CMGMMO tournament!?</p>
+            <p>ไมน์คราฟต์เซิร์ฟเวอร์ <span id="yellow">CMGMMO</span></p>
+            <p>เซิร์ฟเวอร์ เก็บเวลตีมอน บนไมน์คราฟต์มือถือ(Bedrock)</p>
+            <p>คุณพร้อมที่จะลงสมัคร ทัวร์นาเมนต์แล้วหรือยัง?</p>
             <br>
-            <button id="jointournament">Join Tournament</button>
-            <button id="connect-button" onclick="openMinecraft()">Join Server</button>
-            <button id="cmgmmodis">Join Discord</button>
-            <br>
-            <div class="server-details">
-                <h3>Server Details:</h3>
-                <ul>
-                    <li><strong>Server Name:</strong> CMGMMO!</li>
-                    <li><strong>Server Address:</strong> cmgmmo.mc.in.th</li>
-                    <li><strong>Server Port:</strong> 21356</li>
-                </ul>
-            </div>
-            <div id="instructions"></div>
+            <button id="jointournament">ใช่ฉันพร้อมแล้ว!</button>
+            <button id="back">ย้อนกลับ!</button>
         </div>
     </main>
     <footer>
