--- a/Server/index.html
+++ b/Server/index.html
@@ -42,7 +42,7 @@
             background-size: cover;
             background-attachment: fixed;
             text-align: center;
-            overflow: hidden;
+            overflow: auto;
             font-size: 20px;
             font-family: 'IBM Plex Sans Thai', Arial, sans-serif;
             height: 100vh;
