--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
+
     * {
       margin: 0;
       padding: 0;
@@ -12,8 +13,13 @@
       font-family: 'IBM Plex Sans Thai', Arial, sans-serif;
     }
   </style>
+  <title>@CMGMMO!</title>
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="icon"
+    href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+  <script src="../script.js"></script>
   <meta property="og:title" content="@CMGMMO's Server">
-  <meta property="og:description" content="เพิ่มเซิร์ฟเวอร์ CMGMMO บนไมน์คราฟต์!">
+  <meta property="og:description" content="เซิร์ฟเวอร์ CMGMMO!">
   <meta property="og:image"
     content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
   <meta property="og:url" content="https://cmgmmo.github.io">
