--- a/Tournament/index.html
+++ b/Tournament/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="@CMGMMO">
     <meta property="og:description" content="สมัครเข้าร่วมทัวร์นาเมนต์ของเซิร์ฟเวอร์ CMGMMO!">
     <meta property="og:image"
-        content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+        content="./img/cmg.png">
     <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <title>เข้าร่วมทัวร์นาเมนต์ CMGMMO!</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon"
-        href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+        href="./img/cmg.png">
     <script src="../script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
@@ -202,7 +202,7 @@
 <body>
     <main>
         <div class="container">
-            <img src="https://media.discordapp.net/attachments/967680143617302548/1147171234820390972/minecraft_title.png?width=1278&height=405" alt="Logo"
+            <img src="../img/title_tournament.png" alt="Logo"
                 class="w-48 h-auto mb-5 animate-heartbeat_3s_ease-in-out_infinite rounded">
             <p>ไมน์คราฟต์เซิร์ฟเวอร์ <span id="yellow">CMGMMO</span></p>
             <p>เซิร์ฟเวอร์ เก็บเวลตีมอน บนไมน์คราฟต์มือถือ(Bedrock)</p>
