--- a/discord/index.html
+++ b/discord/index.html
@@ -5,14 +5,14 @@
     <meta property="og:title" content="ดิสคอร์ดของ CMGMMO">
     <meta property="og:description" content="เข้าร่วมชุมชนของพวกเรา ดิสคอร์ด">
     <meta property="og:image"
-        content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+        content="./img/cmg.png">
     <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@CMGMMO ดิสคอร์ด!</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon"
-        href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+        href="./img/cmg.png">
     <script src="../script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
@@ -207,7 +207,7 @@
             <p>เซิร์ฟเวอร์ เก็บเวลตีมอน บนไมน์คราฟต์มือถือ!</p>
             <p>เข้าร่วมชุมชนดิสคอร์ดของเรา ผู้คนในนั้นอาจช่วยตอบคำถามหรือข้อสงไสของคุณได้</p>
             <br>
-            <button id="cmgmmodis">เข้าร่วม ดิสคอร์ด!</button>
+            <button id="cmgmmodiscord">เข้าร่วม ดิสคอร์ด!</button>
             <button id="back">ย้อนกลับ</button>
             <br>
         </div>
