--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
   <title>@CMGMMO!</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="icon"
-    href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+    href="./img/cmg.png">
   <script src="../script.js"></script>
   <meta property="og:title" content="@CMGMMO's Server">
   <meta property="og:description" content="เซิร์ฟเวอร์ CMGMMO!">
   <meta property="og:image"
-    content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+    content="./img/cmg.png">
   <meta property="og:url" content="https://cmgmmo.github.io">
   <meta charset="UTF-8">
   <title>CMGMMO!</title>
   <h2>กำลังพาคุณไปหน้าหลักกรุณารอสักครู่..<h2>
       <link rel="icon"
-        href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
+        href="./img/cmg.png">
       <meta http-equiv="refresh" content="0;url=./Server">
 </head>
 
