--- a/plus/index.html
+++ b/plus/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta property="og:title" content="@CMGMMO+ รีซอสแพ็ค">
     <meta property="og:description" content="ดาวน์โหลดรีซอสแพ็ค CMGMMO+">
-    <meta property="og:image" content="./img/cmg.png">
+    <meta property="og:image" content="https://lh3.googleusercontent.com/u/0/drive-viewer/AK7aPaCnQr7E8Zk-8PPF9b87cVI5h-NgtuAcdl2rKywK83B1CHOex775WHc3j_-yXxrPs6IlZDV-ugExFXFxFMgYSfSbEhNzDQ=w1912-h958">
     <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ดาวน์โหลดรีซอสแพ็ค CMGMMO+</title>
     <link rel="stylesheet" href="../styles.css">
-    <link rel="icon" href="./img/cmg.png">
+    <link rel="icon" href="https://lh3.googleusercontent.com/u/0/drive-viewer/AK7aPaCnQr7E8Zk-8PPF9b87cVI5h-NgtuAcdl2rKywK83B1CHOex775WHc3j_-yXxrPs6IlZDV-ugExFXFxFMgYSfSbEhNzDQ=w1912-h958">
     <script src="../script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
