--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
   <title>@CMGMMO!</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="icon"
-    href="./img/cmg.png">
+    href="https://lh3.googleusercontent.com/u/0/drive-viewer/AK7aPaCnQr7E8Zk-8PPF9b87cVI5h-NgtuAcdl2rKywK83B1CHOex775WHc3j_-yXxrPs6IlZDV-ugExFXFxFMgYSfSbEhNzDQ=w1912-h958">
   <script src="../script.js"></script>
   <meta property="og:title" content="@CMGMMO's Server">
   <meta property="og:description" content="เซิร์ฟเวอร์ CMGMMO!">
   <meta property="og:image"
-    content="./img/cmg.png">
+    content="https://lh3.googleusercontent.com/u/0/drive-viewer/AK7aPaCnQr7E8Zk-8PPF9b87cVI5h-NgtuAcdl2rKywK83B1CHOex775WHc3j_-yXxrPs6IlZDV-ugExFXFxFMgYSfSbEhNzDQ=w1912-h958">
   <meta property="og:url" content="https://cmgmmo.github.io">
   <meta charset="UTF-8">
   <title>CMGMMO!</title>
   <h2>กำลังพาคุณไปหน้าหลักกรุณารอสักครู่..<h2>
       <link rel="icon"
-        href="./img/cmg.png">
+        href="https://lh3.googleusercontent.com/u/0/drive-viewer/AK7aPaCnQr7E8Zk-8PPF9b87cVI5h-NgtuAcdl2rKywK83B1CHOex775WHc3j_-yXxrPs6IlZDV-ugExFXFxFMgYSfSbEhNzDQ=w1912-h958">
       <meta http-equiv="refresh" content="0;url=./Server">
 </head>
 
