--- a/discord/index.html
+++ b/discord/index.html
@@ -5,14 +5,14 @@
     <meta property="og:title" content="ดิสคอร์ดของ CMGMMO">
     <meta property="og:description" content="เข้าร่วมชุมชนของพวกเรา ดิสคอร์ด">
     <meta property="og:image"
-        content="https://images-ext-2.discordapp.net/external/IGwzZtOgo3sg6FFaPVWOmakJKJO6unuxISpKXfoma30/https/lh3.googleusercontent.com/u/0/drive-viewer/AK7aPaCnQr7E8Zk-8PPF9b87cVI5h-NgtuAcdl2rKywK83B1CHOex775WHc3j_-yXxrPs6IlZDV-ugExFXFxFMgYSfSbEhNzDQ%3Dw1912-h958?width=640&height=640">
+        content="https://raw.githubusercontent.com/CMGMMO/cmgmmo.github.io/main/img/cmg.png">
     <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@CMGMMO ดิสคอร์ด!</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon"
-        href="https://images-ext-2.discordapp.net/external/IGwzZtOgo3sg6FFaPVWOmakJKJO6unuxISpKXfoma30/https/lh3.googleusercontent.com/u/0/drive-viewer/AK7aPaCnQr7E8Zk-8PPF9b87cVI5h-NgtuAcdl2rKywK83B1CHOex775WHc3j_-yXxrPs6IlZDV-ugExFXFxFMgYSfSbEhNzDQ%3Dw1912-h958?width=640&height=640">
+        href="https://raw.githubusercontent.com/CMGMMO/cmgmmo.github.io/main/img/cmg.png">
     <script src="../script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
