--- a/plus/index.html
+++ b/plus/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta property="og:title" content="@CMGMMO+ รีซอสแพ็ค">
     <meta property="og:description" content="ดาวน์โหลดรีซอสแพ็ค CMGMMO+">
-    <meta property="og:image" content="https://raw.githubusercontent.com/CMGMMO/cmgmmo.github.io/main/img/cmg.png">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png">
     <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ดาวน์โหลดรีซอสแพ็ค CMGMMO+</title>
     <link rel="stylesheet" href="../styles.css">
-    <link rel="icon" href="https://raw.githubusercontent.com/CMGMMO/cmgmmo.github.io/main/img/cmg.png">
+    <link rel="icon" href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png">
     <script src="../script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
