--- a/Tournament/index.html
+++ b/Tournament/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="@CMGMMO">
     <meta property="og:description" content="สมัครเข้าร่วมทัวร์นาเมนต์ของเซิร์ฟเวอร์ CMGMMO!">
     <meta property="og:image"
-        content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png">
+        content="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
     <meta property="og:url" content="https://cmgmmo.github.io">
     <meta charset="UTF-8">
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <title>เข้าร่วมทัวร์นาเมนต์ CMGMMO!</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon"
-        href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png">
+        href="https://media.discordapp.net/attachments/661178624124387328/1119968914877718598/637f4609c09790004e2ed05d_vip.png?width=640&height=640">
     <script src="../script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@400;700;900&display=swap');
