--- a/plus/index.html
+++ b/plus/index.html
@@ -207,14 +207,9 @@
             <img src="../img/cmgmmo+.png" alt="Logo"
                 class="w-48 h-auto mb-5 animate-heartbeat_3s_ease-in-out_infinite rounded">
             <p>ดาวน์โหลดรีซอสแพ็ค <span id="yellow">CMGMMO+</span></p>
-            <p>เลือกเวอชั่นของ รีซอสแพ็ค ที่คุณต้องการ!</p>
-            <p>แนะนำเวอชั่นล่าสุด</p>
+            <p>[ประกาศ] CMGMMO+ ไม่อยู่ในการรองรับของเซิร์ฟเวอร์ CMGMMO</p>
+            <p>อีกต่อไป~</p>
             <br>
-            <button id="1.3.0">Beta 1.3.0</button>
-            <button id="1.2.0">Beta 1.2.0</button>
-            <button id="1.1.0">Beta 1.1.0</button>
-            <button id="1.0.0">Beta 1.0.0</button>
-            <button id="github">ประวัติการอัปเดต</button>
             <button id="back">ย้อนกลับ..</button>
             <br>
             <div class="server-details">
