--- a/plus/index.html
+++ b/plus/index.html
@@ -208,7 +208,7 @@
                 class="w-48 h-auto mb-5 animate-heartbeat_3s_ease-in-out_infinite rounded">
             <p>ดาวน์โหลดรีซอสแพ็ค <span id="yellow">CMGMMO+</span></p>
             <p>[ประกาศ] CMGMMO+ ไม่อยู่ในการรองรับของเซิร์ฟเวอร์ CMGMMO</p>
-            <p>เป็นเพียง ProJect ของบัคคลใดบุคคลหนึง</p>
+            <p>เป็นเพียง ProJect ของบุคคลใดบุคคลหนึง</p>
             <p>ซึ่งจะไม่เกี่ยวข้องกับเซิร์ฟเวอร์อีกต่อไป (จึงเรียนมาเพื่อทราบ)</p>
             <br>
             <button id="back">ย้อนกลับ..</button>
